# smm-autopilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.tape  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXTENDING.md  SETUP.md  sample-report.md
src/smm_autopilot/: __init__.py  cli.py  config.py  log.py
src/smm_autopilot/engine/: __init__.py  demo.py  graph.py  metrics.py  normalize.py  pipeline.py  ranking.py  scrape.py  serialize.py
src/smm_autopilot/engine/nodes/: __init__.py  cleanup.py  competitor.py  compliance.py  content.py  filter.py  ideation.py  influencer.py  ingestion.py  report.py  strategic.py  synthesis.py  trend.py  web_context.py
src/smm_autopilot/integrations/: __init__.py  apify_client.py  news_rss.py
src/smm_autopilot/integrations/output/: __init__.py  json_output.py  markdown.py
src/smm_autopilot/llm/: __init__.py  config.py  router.py
src/smm_autopilot/models/: __init__.py  action_plan.py  api.py  brief.py  competitor.py  compliance.py  influencer.py  marketing_idea.py  post.py  region_context.py  report.py  state.py  trend.py
src/smm_autopilot/prompts/: __init__.py  competitor_analyzer_system.txt  compliance_system.txt  content_system.txt  filter_system.txt  influencer_analyzer_system.txt  marketing_ideation_system.txt  strategic_planner_system.txt  synthesis_system.txt  trend_analyzer_system.txt
src/smm_autopilot/storage/: __init__.py  checkpoint.py  store.py
src/smm_autopilot/templates/: __init__.py  tenant.example.yaml
tests/: test_apify.py  test_config.py  test_demo.py  test_example_tenant.py  test_graph.py  test_llm.py  test_nodes_analysis.py  test_nodes_generation.py  test_nodes_intake.py  test_normalize.py  test_output.py  test_resilience_regressions.py  test_smoke.py  test_storage.py
